Improved Greek translation - thank you, Christos Theodosiou

--- a/language/el/lng.conf
+++ b/language/el/lng.conf
@@ -1,11 +1,11 @@
 address = Διεύθυνση
 adduser = Προσθήκη Χρήστη
-admin = Admin
-all = Όλoυς
+admin = Διαχειριστής
+all = Όλους
 avatar = Εικόνα
 cellphone = Κινητό
-changepassword = Αλλαγή password
-chatwith = Chat με
+changepassword = Αλλαγή κωδικού
+chatwith = Συζήτηση με
 city = Πόλη
 client = Πελάτης
 company = Εταιρεία
@@ -13,7 +13,7 @@ confirmlogout = Αποσύνδεση;
 contact = Επαφή
 country = Χώρα
 deassignuser = Αποσύνδεση του χρήστη
-deleteform = Επανάθεση των tasks του χρήστη αυτού;
+deleteform = Ανάθεση εκ νέου των εργασιών του χρήστη;
 deleteuser = Διαγραφή χρήστη
 edituser = Επεξεργασία χρήστη
 email = E-Mail
@@ -24,104 +24,118 @@ lastlogin = Τελευταία είσοδος
 locale = Γλώσσα
 login = Είσοδος
 loginbutton = Είσοδος
-loginerror = Δε συνδεθήκατε.<br />Ελέγξτε τα στοιχεία εισόδου σας.
+loginerror = Δε έχετε συνδεθεί.<br />Παρακαλώ ελέγξτε τα στοιχεία εισόδου σας.
 logout = Έξοδος
 male = Άνδρας
 members = Άτομα
 myaccount = Ο λογαριασμός μου
-newpass = Νέο password
-oldpass = Παλιό password
-password = Password
+newpass = Νέος κωδικός
+none = Κενό
+oldpass = Παλιός κωδικός
+password = Κωδικός
 phone = Τηλέφωνο
 rate = Ωρομίσθιο
-repeatpass = Επανάληψη password
+repeatpass = Επανάληψη κωδικού
 state = Πολιτεία
-stayloggedin =  αυτόματη σύνδεση
-template = Template
+stayloggedin = Αυτόματη σύνδεση
+template = Πρότυπο
 url = Ιστοσελίδα
 user = Χρήστης
 useradministration = Διαχείριση χρηστών
 userprofile = Προφίλ χρήστη
-usersonline = Χρήστες online 
+usersonline = Χρήστες σε σύνδεση
 userwasadded = Ο χρήστης προστέθηκε
-userwasassigned = User was assigned
-userwasdeassigned = User was deassigned
-userwasdeleted = Ο χρήστης διεγράφη.
+userwasassigned = Ο χρήστης ανατέθηκε
+userwasdeassigned = Ο χρήστης αποανατέθηκε
+userwasdeleted = Ο χρήστης διεγράφη
 userwasedited = Τα στοιχεία του χρήστη επεξεργάστηκαν επιτυχώς
-vcardexport = Εξαγωγή V-card 
-welcomeback = Καλωσήρθατε
+vcardexport = Εξαγωγή vCard 
+welcomeback = Καλωσορίσατε
 zip = Τ.Κ.
-access = Access
-addproject = Νέο project
+
+{* Project *}
+
+access = Πρόσβαση
+addproject = Νέο έργο
 assignto = Ανάθεση σε
-closedprojects = Κλειστά projects
-deassign = Deassign
+budget = Προϋπολογισμός
+closedprojects = Κλειστά έργα
+deassign = Αποανάθεση
 description = Περιγραφή
-editproject = Επεξεργασία project
-myprojects = Τα project μου
+editproject = Επεξεργασία έργου
+myprojects = Τα έργα μου
 name = Όνομα
-noprojects = Δε βρέθηκαν projects.
-openprojects = Ανοιχτά projects
-project = Project
-projects = Projects
-projectadministration = Διαχείριση project
-projectname = Όνομα project
-projectwasadded = To project προστέθηκε
-projectwasclosed = Το project έκλεισε
-projectwasdeleted = Το project διεγράφη
-projectwasedited = Το project επεξεργάστηκε επιτυχώς
-projectwasopened = Το project άνοιξε
-report = Report
-start = Start
-addtask = Προσθήκη task
-addtasklist = Προσθήκη tasklist
+noprojects = Δε βρέθηκαν έργα.
+openprojects = Ανοιχτά έργα
+project = Έργο
+projects = Έργα
+projectadministration = Διαχείριση έργου
+projectname = Όνομα έργου
+projectwasadded = To έργο προστέθηκε
+projectwasclosed = Το έργο έκλεισε
+projectwasdeleted = Το έργο διεγράφη
+projectwasedited = Το έργο επεξεργάστηκε επιτυχώς
+projectwasopened = Το έργο άνοιξε
+report = Έκθεση
+start = Εκίννηση
+
+{* Task / Tasklist *}
+
+addtask = Προσθήκη εργασίας
+addtasklist = Προσθήκη λίστας εργασιών
 assign = Ανάθεση
-deletetasks = Διαγραφή tasks
+deletetasks = Διαγραφή εργασιών
 done = ΟΚ
-donetasklists = Τελειωμένα tasklists
-donetasks = Τελειωμένα tasks
-edittask = Επεξεργασία task
-edittasklist = Επεξεργασία tasklist
-latetasks = Καθυστερημένα tasks
-mytasks = Τα tasks μου
-newtasks = Νέα tasks
-notasklists = Δε βρέθηκε tasklist.<br />δημιουργήστε μία.
-notasks = Δεν εκρεμμούν tasks 
+donetasklists = Ολοκληρωμένες λίστες εργασιών
+donetasks = Ολοκληρωμένες εργασίες
+edittask = Επεξεργασία εργασίας
+edittasklist = Επεξεργασία λίστας εργασιών
+latetasks = Καθυστερημένες εργασίες
+mytasks = Οι εργασίες μου
+newtasks = Νέες εργασίες
+notasklists = Δε βρέθηκε λίστα εργασιών.<br />Παρακαλώ δημιουργήστε μία λίστα.
+notasks = Δεν εκκρεμούν εργασίες 
 openprogress = Ανοικτό
 status = Κατάσταση
-task = Task
-tasklist = Tasklist
-tasklists = Tasklists
-tasklistwasadded = Η tasklist προστέθηκε
-tasklistwasclosed = H tasklist έκλεισε
-tasklistwasdeleted = H tasklist διεγράφη
-tasklistwasedited = H tasklist επεξεργάστηκε επιτυχώς
-tasklistwasopened = H tasklist άνοιξε
-tasks = Tasks
-taskwasadded = Το task προστέθηκε
-taskwasassigned = Το task ανατέθηκε
-taskwasclosed = Το task έκλεισε
-taskwasdeassigned = Task was deassigned
-taskwasdeleted = Το task διεγράφη
-taskwasedited = Το task επεξεργάστηκε επιτυχώς
-taskwasopened = Το task άνοιξε
+task = Εργασία
+tasklist = Λίστα Εργασιών
+tasklists = Λίστες Εργασιών
+tasklistwasadded = Η λίστα εργασιών προστέθηκε
+tasklistwasclosed = H λίστα εργασιών έκλεισε
+tasklistwasdeleted = H λίστα εργασιών διεγράφη
+tasklistwasedited = H λίστα εργασιών επεξεργάστηκε επιτυχώς
+tasklistwasopened = H λίστα εργασιών άνοιξε
+tasks = Εργασίες
+taskwasadded = Η εργασία προστέθηκε
+taskwasassigned = Η εργασία ανατέθηκε
+taskwasclosed = Η εργασία έκλεισε
+taskwasdeassigned = Η εργασία αποανατέθηκε
+taskwasdeleted = Η εργασία διεγράφη
+taskwasedited = Η εργασία επεξεργάστηκε επιτυχώς
+taskwasopened = Η εργασία άνοιξε
 text = Κείμενο
-todaytasks = Tasks για σήμερα
-addmilestone = Προσθήκη milestone
-donemilestones = Done milestones
+todaytasks = Σημερινές εργασίες
+
+{* Milestone *}
+
+addmilestone = Προσθήκη ορόσημου
+donemilestones = Ολοκληρωμένα ορόσημα
 due = Λήξη
-editmilestone = Επεξεργασία milestone
+editmilestone = Επεξεργασία ορόσημου
 end = Τέλος
-latestones = Καθυστερημένα milestones
-milestone = Milestone
-milestones = Milestones
-milestonewasadded = Το milestone προστέθηκε
-milestonewasclosed = Το milestone έκλεισε
-milestonewasdeleted = Το milestone διεγράφη
-milestonewasedited = Το milestone επεξεργάστηκε επιτυχώς
-milestonewasopened = Το milestone was άνοιξε
-newmilestones = Νέα milestones
-todaystones = Σημερινά milestones
+latestones = Τελευταία ορόσημα
+milestone = Ορόσημο
+milestones = Ορόσημα
+milestonewasadded = Το ορόσημο προστέθηκε
+milestonewasclosed = Το ορόσημο έκλεισε
+milestonewasdeleted = Το ορόσημο διεγράφη
+milestonewasedited = Το ορόσημο επεξεργάστηκε επιτυχώς
+milestonewasopened = Το ορόσημο άνοιξε
+newmilestones = Νέα ορόσημα
+todaystones = Σημερινά ορόσημα
+
+{* Messages *}
+
 addmessage = Νέο μήνυμα
 answer = Απάντηση
 editmessage = Επεξεργασία μηνύματος
@@ -130,6 +144,8 @@ messages = Μηνύματα
 messagewasadded = Το μήνυμα προστέθηκε
 messagewasdeleted = Το μήνυμα διεγράφη
 messagewasedited = Το μήνυμα επεξεργάστηκε επιτυχώς
+messagewasaddedsubject = Ειδοποίηση από Collabtive – Προστέθηκε μήνυμα
+messagewasaddedtext = το ακόλουθο μήνυμα προστέθηκε:
 mymessages = Τα μηνύματά μου
 replies = Απαντήσεις
 reply = Απάντηση
@@ -137,87 +153,109 @@ replywasadded = Η απάντηση προστέθηκε
 replywasdeleted = Η απάντηση διεγράφη
 replywasedited = Η απάντηση επεξεργάστηκε επιτυχώς
 title = Τίτλος
+
+{* eMails *}
+
 mailfrommail = Ε-mail αποστολέα
 mailfromname = Όνομα αποστολέα
-mailmethod = Method
-mailserver = Server
-mailusername = SMTP username
-mailpass = SMTP password
-profileaddedsubject =
-profileaddedtext =
-profilepass =
-profileusername =
-projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε project
+mailmethod = Μέθοδος
+mailserver = Εξυπηρετητής
+mailusername = όνομα χρήστη SMTP
+mailpass = κωδικός SMTP
+profileaddedsubject = Ειδοποίηση από Collabtive – Δημιουργία χρήστη
+profileaddedtext = Ένας νέος χρήστης δημιουργήθηκε για εσάς στο παρακάτω website. Για λόγους ασφαλείας, παρακαλώ αλλάξτε των κωδικό σας μετά την πρώτη εγκατάσταση!
+profilepass = Κωδικός
+profileusername = Όνομα χρήστη
+hello = Χαίρεται
+projectassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε έργο
 projectassignedtext =
-taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε task
-taskassignedtext = Γεια χαρά,<br /><br />σας ανατέθηκε ένα νέο task :<br />
+taskassignedsubject = Ειδοποίηση από Collabtive – Σας ανατέθηκε εργασία
+taskassignedtext = Χαίρεται,<br /><br />σας ανατέθηκε ένα νέα εργασία :<br />
+
+{* Files *}
+
 addfile = Προσθήκη αρχείου 
 addfiles = Προσθήκη αρχείων
-addfolder = Νέος φάκελος
+addfolder = Προσθήκη φακέλου
 attachfile = Επισύναψη αρχείου
 attachfiles = Επισύναψη αρχείων
-count = αριθμός
+count = Αριθμός
 directories = Φάκελοι
-directory = Φάκλεος
+directory = Φάκελος
 editfile = Επεξεργασία αρχείου
 editfolder = Επεξεργασία φακέλου
 file = Αρχείο
 files = Αρχεία
+filecreatedsubject = Ειδοποίηση από Collabtive – Αρχείο προστέθηκε
+filecreatedtext = ένα αρχείο προστέθηκε σε ένα από τα έργα σας.
 filewasadded = Το αρχειο προστέθηκε
 filewasdeleted = Το αρχείο διεγράφη
 filewasedited = Το αρχείο επεξεργάστηκε επιτυχώς
 folder = Φάκελος
 folderwasadded = Ο φάκελος προστέθηκε
 folderwasdeleted = Ο φάκελος διεγράφη
-folderwasedited = Ο φάκλεος επεξεργάστηκε επιτυχώς
+folderwasedited = Ο φάκελος επεξεργάστηκε επιτυχώς
 managefolders = Διαχείριση φακέλων
 maxsize = Μέγιστο μέγεθος
-rootdir = Root directory
+parent = Αρχικός φάκελος
+rootdir = Βασικός κατάλογος
+visibility = Ορατό για
+
+{* Search *}
+
 advancedsearch = Σύνθετη αναζήτηση
 didyoumean = Μήπως εννοούσατε
-gosearch = Go!
+gosearch = Εκκίνηση!
 newsearch = Νέα αναζήτηση
 noresults = Δε βρέθηκαν αποτελέσματα που να ταιριάζουν στην αναζήτησή σας.
-refinesearch = Refine search
+refinesearch = Περιορισμένη αναζήτηση
 results = Αποτελέσματα
 resultsfor = Αποτελέσματα για
 search = Αναζήτηση
 searchfor = Αναζήτηση για
-searching = αναζήτηση...
-searchitem = Search item
-ar =
+searching = Αναζήτηση...
+searchitem = Στοιχείο Αναζήτησης
+
+{* Languages *}
+
+al = Αλβανικά
+ar = Αραβικά
 bg = Βουλγάρικα
-ca =
-zh = Κινέζικα
+ca = Καταλανικά
 cs = Τσέχικα
 da = Δανικά
 de = Γερμανικά
 el = Ελληνικά
 en = Αγγλικά
 es = Ισπανικά
-gl =
-fi =
+fa = Περσικά
+fi = Φιλανδικά
 fr = Γαλλικά
-hu = Ούγγρικα
+gl = Γαλλικιανά
+hu = Ουγγρικά
 it = Ιταλικά
 ja = Ιαπωνικά
 lt = Λιθουανικά
 nl = Ολλανδικά
-nn =
+nn = Νορβηγικά
 pl = Πολωνικά
 pt = Πορτογαλικά
 pt_br = Πορτογαλικά (Βραζιλίας)
 ro = Ρουμάνικα
+ru = Ρώσικα
+se = Σουηδικά
+sk = Σλοβάκικα
 sr = Σέρβικα
-ru = Ρώσσικα
-se =
-sk =
 tr = Τουρκικά
-uk =
+uk = Ουκρανικά
+zh = Κινέζικα
+
+{* Calendar *}
+
 calendar = Ημερολόγιο
 dateformat = Μορφή ώρας
 timezone = Ζώνη ώρας
-prevmonth = προηγούμνος μήνας
+prevmonth = προηγούμενος μήνας
 nextmonth = επόμενος μήνας
 monday = Δε
 tuesday = Τρι
@@ -238,65 +276,83 @@ september = Σεπτέμβριος
 october = Οκτώβριος
 november = Νοέμβριος
 december = Δεκέμβριος
-accessdenied = Access denied
-confirmdel = Είσαι σίγουρος για τη διαγραφή;\nΗ διαγραφή δε μπορεί να αναιρεθεί.
+
+{* Errors *}
+
+accessdenied = Περιορισμένη Πρόσβαση
+confirmdel = Είστε σίγουρος για τη διαγραφή;\nΗ διαγραφή δε μπορεί να αναιρεθεί.
 error = Σφάλμα
-goback = παρακαλώ επιστρέψτε και διορθώστε.
-nopermission = Permission denied
-notyourproject = Δε σας έχει ανατεθεί αυτό το project.
+goback = Παρακαλώ επιστρέψτε και διορθώστε το σφάλμα.
+nopermission = Περιορισμένα Δικαιώματα
+notyourproject = Δε σας έχει ανατεθεί αυτό το έργο.
 wrongfield = Παρακαλώ εισάγετε μια έγκυρη τιμή για \"%FIELDNAME%\".
 wrongfields = Παρακαλώ εισάγετε έγκυρες τιμές για:\n\n
 wrongselect = Παρακαλώ επιλέξτε μια έγκυρη τιμή για \"%FIELDNAME%\".
-createadmin =Τώρα θα δημιουργηθεί ο πρώτος χρήστης. Ο χρήστης αυτός θα είναι ο administrator και δε μπορεί να διαγραφεί.
-clickcontinue = Κλικ στο "Συνέχεια" για να συνεχιστεί η εγκατάσταση.
+
+{* Installation *}
+
+createadmin = Δημιουργήστε τον πρώτο χρήστη. Ο χρήστης αυτός θα είναι ο διαχειριστής και δε μπορεί να διαγραφεί.
+clickcontinue = Επιλέξτε στο "Συνέχεια" για να προχωρήσει η εγκατάσταση.
 continue = Συνέχεια
-correctfaults = Παρακαλώ διορθώστε..
-db = Database
-dbhost = Database host
-dbname = Database name
-dbpass = Database password
-dbuser = Database user
-insertdbaccessdata = Εδώ εισάγετε τα στοιχεία πρόσβασης της βάσης δεδομένων σας.
+correctfaults = Παρακαλώ διορθώστε τα σφάλματα.
+db = Βάση Δεδομένων
+dbhost = Εξυπηρετητής βάσης δεδομένων
+dbname = Όνομα βάσης δεδομένων
+dbpass = Κωδικός βάσης δεδομένων
+dbuser = Όνομα χρήστη βάσης δεδομένων
+insertdbaccessdata = Παρακαλώ εισάγετε τα στοιχεία πρόσβασης στη βάση δεδομένων.
 installcollabtive = Εγκατάσταση του Collabtive
 installerchecksconditions = Το πρόγραμμα εγκατάστασης ελέγχει αν όλες οι προαπαιτούμενες ρυθμίσεις είναι εντάξει.
 installerconditions = Απαιτήσεις εγκατάστασης
 installerlanguage = Γλώσσα Εγκατάστασης
 installstep = Βήμα
 installsuccess = Η εγκατάσταση ολοκληρώθηκε επιτυχώς
-iswritable =
+iswritable = έχει δικαιώματα εγγραφής
 makedirwritable = Παρακαλώ δώστε δικαιώματα εγγραφής στο φάκελο.
 makefilewritable = Παρακαλώ δώστε δικαιώματα εγγραφής στο αρχείο.
 phpversion = Χρειάζεστε τουλάχιστο την έκδοση 5.1 της PHP για να εγκαταστήσετε το Collabtive.
-proceedtologin = Έναρξη χρήσης του BIS Project.
+proceedtologin = Πλοηγηθείτε στη σελίδα σύνδεσης.
+mb_string_enabled = Η επέκταση mb_string φορτώθηκε
+enable_mb_string = Παρακαλώ ενεργοποιήστε την επέκταση mb_string 
+
+{* Timetracker *}
+
 comment = Σχόλιο
-edittimetracker = Επεξεργασία καταχώρησης timetracker
+edittimetracker = Επεξεργασία καταχώρησης χρονομέτρου
 endafterstart = Η ώρα λήξης πρέπει να είναι μετά την ώρα έναρξης.
-ended = Τελείωσε
+ended = Ολοκληρώθηκε
 filter = Φίλτρο
-filterreport = Φίλτρο
+filterreport = Φίλτρο Έκθεσης
 hours = Ώρες
 inserttime = Τρέχουσα ώρα
-noassociatedtask = Δεν υπάρχει σχετικό task
-reporting = Reporting
+noassociatedtask = Δεν υπάρχει σχετική εργασία
+report = Έκθεση
+reporting = Έκθεση
 started = Ξεκίνησε
 totalhours = Συνολικές ώρες
-timetable = Timetable για
-timetracker = Timetracker
+timetable = Χρονοδιάγραμμα για
+timetracker = Χρονόμετρο
 timetrackeradded = Η ώρα προστέθηκε
-add =
-addrole =
-delete =
-delrole =
-edit =
-editrole =
-permissionread =
-permissions =
-permissionswereedited =
-role = Θέση
-roleadded =
-roleedited =
-roles =
-active = Active
+
+{* Roles / Permissions *}
+
+add = Προσθήκη
+addrole = Προσθήκη ρόλου
+delete = Διαγραφή
+delrole = Διαγραφή ρόλου
+edit = Επεξεργασία
+editrole = Επεξεργασία ρόλου
+permissionread = Ανάγνωση
+permissions = Δικαιώματα
+permissionswereedited = Τα δικαιώματα επεξεργάστηκαν
+role = Ρόλος
+roleadded = Ο ρόλος προστέθηκε
+roleedited = Ο ρόλος επεξεργάστηκε
+roles = Ρόλοι
+
+{* Miscellaneous *}
+
+active = Ενεργό
 activity = Κίνηση
 action = Ενέργεια
 actions = Ενέργειες
@@ -304,29 +360,31 @@ addbutton = ΟΚ
 added = προστέθηκε
 administration = Διαχείριση
 assigned = ανατέθηκε
-attachbutton = Attach
+attachbutton = Επισύναψη
 by = από
 cancel = Άκυρο
-chat =
+chat = Συζήτηση
 chooseone = Επιλέξτε
 close = Κλείσιμο
 closed = κλειστό
-day = Μέρα
-dayslate = Μέρες καθυστέρησης
-daysleft = Μέρες που απομένουν
-deassigned = deassigned
+day = Ημέρα
+dayslate = Ημέρες καθυστέρησης
+daysleft = Υπόλοιπο ημερών
+deassigned = αποανατέθει
 deleted = διεγράφη
-desktop = Desktop
+desktop = Επιφάνεια Εργασίας
 edited = επεξεργάστηκε
 excelexport = Excel
 export = Εξαγωγή
 favicon = Favicon
+general = Γενικό
 help = Βοήθεια
 icalexport = Εξαγωγή iCal
 import = Εισαγωγή από Basecamp
-importsuccess = Η εισαγωγή ολοκληρώθηκε επιτυχώς.
+importsuccess = Η εισαγωγή ολοκληρώθηκε επιτυχώς
 inactive = Ανενεργό
 no = Όχι
+notify = Κοινοποίηση
 objoff = Ανενεργό
 objon = Ενεργό
 on = Δημιουργήθηκε
@@ -338,19 +396,21 @@ pdfexport = Εξαγωγή PDF
 private = Ιδιωτικό
 public = Δημόσιο
 rssfeed = RSS ροή
-rsspass =
-rssuser =
-send = ΟΚ
+rsspass = RSS κωδικός
+rssuser = RSS χρήστης
+send = Αποστολή
 settings = Ρυθμίσεις
-settingschanged = Οι ρυθμίσεις άλλαξαν.
-showall = Όλα
-started = Ξεκίνησε
+settingschanged = Οι ρυθμίσεις άλλαξαν
+settingsedited = Οι ρυθμίσεις επεξεργάστηκαν
+showall = Πλήρης προβολή
+started = Εκτελείται
 subtitle = Υπότιτλος
-systemadministration = Ρυθμίσεις
-systemdefault = Default
+systemadministration = Διαχείριση συστήματος
+systemdefault = Προεπιλογή
 systemsounds = Ήχοι
-tags = Tags
-was =
-were =
+tags = Ετικέτες
+was = ήταν
+were = ήταν
 yes = Ναι
 zipexport = Εξαγωγή ZIP
+neverdue = Χωρίς προθεσμία λήξης
