Added function for password resetting

--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -24,7 +24,7 @@ lastlogin = Zuletzt aktiv
 locale = Sprache
 login = Login
 loginbutton = Einloggen
-loginerror = Login fehlgeschlagen<br />Bitte Benutzernamen und Passwort prüfen!
+loginerror = Login fehlgeschlagen<br />Bitte Benutzernamen und Passwort überprüfen!
 logout = Abmelden
 male = Männlich
 members = Mitglieder
@@ -36,6 +36,12 @@ password = Passwort
 phone = Telefon
 rate = Stundensatz
 repeatpass = Passwort wiederholen
+resetpassword = Passwort zurücksetzen
+resetpasswordemail = Geben Sie Ihre E-Mail-Adresse ein, und Sie werden per E-Mail ein neues Passwort erhalten.
+resetpasswordforgot = Passwort vergessen?
+resetpasswordgenerate = Passwort generieren
+resetpasswordsent = Es wurde eine E-Mail mit dem neuen Passwort versendet.
+resetpasswordfail = Kein Benutzerkonto mit dieser E-Mail-Adresse gefunden.
 state = Bundesland
 stayloggedin = Eingeloggt bleiben
 template = Template
@@ -150,6 +156,8 @@ mailpass = SMTP-Passwort
 profileaddedsubject = Collabtive Benachrichtigung – Benutzerprofil erstellt
 profileaddedtext = Es wurde ein neues Collabtive Benutzerprofil bei der nachstehenden Webseite für Sie erstellt. Bitte ändern Sie aus Sicherheitsgründen das Passwort nach Ihrem ersten Login!
 profilepass = Passwort
+projectpasswordsubject = Collabtive Benachrichtigung – Neues Passwort
+projectpasswordtext = Hallo,<br /><br />für Ihr Benutzerkonto wurde eine neues Passwort generiert.<br />Bitte ändern Sie das Passwort aus Sicherheitsgründen nach Ihrem nächsten Login.
 profileusername = Benutzername
 hello = Hallo
 projectassignedsubject = Collabtive Benachrichtigung – Projekt zugewiesen
@@ -267,7 +275,7 @@ dbname = Datenbankname
 dbpass = Datenbankpasswort
 dbuser = Datenbank-Benutzername
 insertdbaccessdata = Bitte geben sie hier ihre Datenbankzugangsdaten ein.
-installcollabtive = Collabtive - Installation
+installcollabtive = Collabtive Installation
 installerchecksconditions = Der Installer prüft nun, ob alle Voraussetzungen für die Installation gegeben sind.
 installerconditions = Voraussetzungen für die Installation
 installerlanguage = Sprache des Installationsmanagers
