--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -36,6 +36,12 @@ password = Password
 phone = Phone
 rate = Hourly rate
 repeatpass = Repeat password
+resetpassword = Reset password
+resetpasswordemail = Enter your e-mail address and you will receive a new password via e-mail.
+resetpasswordforgot = Forgot your password?
+resetpasswordgenerate = Generate password
+resetpasswordsent = An e-mail with your new password was sent to you.
+resetpasswordfail = No match found for this e-mail address.
 state = State
 stayloggedin = Stay logged in
 template = Template
@@ -164,8 +170,10 @@ mailserver = Server
 mailusername = SMTP username
 mailpass = SMTP password
 profileaddedsubject = Collabtive notification – User profile created
-profileaddedtext = A new user profile on the following website has been created for you. Please change your password after the first login for security reasons!
+profileaddedtext = A new user profile has been created for you on the following website. Please change your password after the first login for security reasons.
 profilepass = Password
+projectpasswordsubject = Collabtive notification – New password
+projectpasswordtext = Hello,<br /><br />a new password has been generated for your user account.<br />Please change your password after your next login for security reasons.
 profileusername = Username
 hello = Hello
 projectassignedsubject = Collabtive notification – Project assigned
@@ -303,7 +311,7 @@ dbname = Database name
 dbpass = Database password
 dbuser = Database user
 insertdbaccessdata = Please insert your database access data here.
-installcollabtive = Install Collabtive
+installcollabtive = Collabtive Installation
 installerchecksconditions = The installer checks, if the requirements are being fulfilled.
 installerconditions = Requirements for the installation
 installerlanguage = Installer language
