- Added missing e-mail notification function when replying to a message - Deleted non-sense translation of swedish install-readme - Code beautified in some template files

--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -138,7 +138,7 @@ messages = Nachrichten
 messagewasadded = Nachricht wurde erstellt
 messagewasdeleted = Nachricht wurde gelöscht
 messagewasedited = Nachricht wurde bearbeitet
-messagewasaddedsubject = Collabtive Benachrichtigung: Nachricht erstellt
+messagewasaddedsubject = Collabtive Benachrichtigung: Neue Nachricht
 messagewasaddedtext = folgende Nachricht wurde erstellt:
 mymessages = Meine Nachrichten
 replies = Antworten
@@ -154,10 +154,10 @@ mailserver = Server
 mailusername = SMTP-User
 mailpass = SMTP-Passwort
 profileaddedsubject = Collabtive Benachrichtigung – Benutzerprofil erstellt
-profileaddedtext = Es wurde ein neues Collabtive Benutzerprofil bei der nachstehenden Webseite für Sie erstellt. Bitte ändern Sie aus Sicherheitsgründen das Passwort nach Ihrem ersten Login!
+profileaddedtext = es wurde ein neues Collabtive Benutzerprofil bei der nachstehenden Webseite für Sie erstellt. Bitte ändern Sie aus Sicherheitsgründen das Passwort nach Ihrem ersten Login!
 profilepass = Passwort
 projectpasswordsubject = Collabtive Benachrichtigung – Neues Passwort
-projectpasswordtext = Hallo,<br /><br />für Ihr Benutzerkonto wurde eine neues Passwort generiert.<br />Bitte ändern Sie das Passwort aus Sicherheitsgründen nach Ihrem nächsten Login.
+projectpasswordtext = für Ihr Benutzerkonto wurde eine neues Passwort generiert.<br />Bitte ändern Sie das Passwort aus Sicherheitsgründen nach Ihrem nächsten Login.
 profileusername = Benutzername
 hello = Hallo
 projectassignedsubject = Collabtive Benachrichtigung – Projekt zugewiesen
