--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -151,7 +151,7 @@ messages = Messages
 messagewasadded = Message was added
 messagewasdeleted = Message was deleted
 messagewasedited = Message was edited
-messagewasaddedsubject = Collabtive notification: Message added
+messagewasaddedsubject = Collabtive notification: New message
 messagewasaddedtext = the following message was added:
 mymessages = My messages
 replies = Replies
@@ -170,10 +170,10 @@ mailserver = Server
 mailusername = SMTP username
 mailpass = SMTP password
 profileaddedsubject = Collabtive notification – User profile created
-profileaddedtext = A new user profile has been created for you on the following website. Please change your password after the first login for security reasons.
+profileaddedtext = a new user profile has been created for you on the following website. Please change your password after the first login for security reasons.
 profilepass = Password
 projectpasswordsubject = Collabtive notification – New password
-projectpasswordtext = Hello,<br /><br />a new password has been generated for your user account.<br />Please change your password after your next login for security reasons.
+projectpasswordtext = a new password has been generated for your user account.<br />Please change your password after your next login for security reasons.
 profileusername = Username
 hello = Hello
 projectassignedsubject = Collabtive notification – Project assigned
