Updated several language files (especially Japanese)

--- a/language/al/lng.conf
+++ b/language/al/lng.conf
@@ -1,7 +1,3 @@
-[strings]
-{* Albanian translation by Visar Uruqi (visar.uruqi@gmail.com) - http://www.3shja.com *}
-{* User / Company *}
-
 address = Adresa
 adduser = Shto shfrytëzues
 admin = Admin
@@ -17,7 +13,7 @@ confirmlogout = Log out?
 contact = Kontakt
 country = Vendi
 deassignuser = Largoje nga detyra shfrytëzuesin
-deleteform = Reassign this user's tasks? Caktoje përsëri këtë detyrë të shfrytzuesit?
+deleteform = Caktoje përsëri këtë detyrë të shfrytzuesit?
 deleteuser = Fshije shfrytëzuesin
 edituser = Edito shfrytëzuesin
 email = E-Mail
@@ -40,6 +36,12 @@ password = Fjalëkalimi
 phone = Telefoni
 rate = Rata e orës
 repeatpass = Përsërite Fjalëkalimin
+resetpassword =
+resetpasswordemail =
+resetpasswordforgot =
+resetpasswordgenerate =
+resetpasswordsent =
+resetpasswordfail =
 state = Shteti
 stayloggedin = Qëndro i kyçur
 template = Mostra
@@ -69,6 +71,7 @@ description = Përshkrimi
 editproject = Edito Projektin
 myprojects = Projektet e mia
 name = Emri
+neverdue =
 noprojects = Asnjë projekt nuk është gjetur.
 openprojects = Hapi projektet
 project = Projekti
@@ -97,7 +100,7 @@ edittasklist = Ndrysho listën e detyrave
 latetasks = Detyrat e fundit
 mytasks = Detyrat e mia
 newtasks = Detyra të reja
-notasklists = Asnjë listë e detyrave nuk është gjetur.<br />Please <a href = "javascript:blindtoggle('addlist');">krijo një listë të detyrave</a>.
+notasklists = Asnjë listë e detyrave nuk është gjetur.<br />Please krijo një listë të detyrave.
 notasks = Asnjë detyrë në pritje
 openprogress = Hape
 status = Statusi
@@ -136,7 +139,6 @@ milestonewasdeleted = Pikësynimi është fshirë
 milestonewasedited = Pikësynimi është ndryshuar
 milestonewasopened = Pikësynimi është hapur
 newmilestones = Pikësynime të reja
-newmilestones = Pikësynime të reja
 todaystones = Pikësynimi të sotit
 
 {* Messages *}
@@ -149,6 +151,8 @@ messages = Mesazhet
 messagewasadded = Mesazhi është shtuar
 messagewasdeleted = Mesazhi është fshirë
 messagewasedited = Mesazhi është ndryshuar
+messagewasaddedsubject =
+messagewasaddedtext =
 mymessages = Mesazhet e mia
 replies = Replikat
 reply = Repliko
@@ -163,15 +167,18 @@ mailfrommail = E-mail i dërguesit
 mailfromname = Emri i dërguesit
 mailmethod = Metoda
 mailserver = Serveri
-mailusername = SMTP username
-mailpass = SMTP password
-profileaddedsubject = Collabtive - Your new user profile
-profileaddedtext = A new user profile has been created for you.
+mailusername =
+mailpass =
+profileaddedsubject =
+profileaddedtext =
 profilepass = Fjalëkalimi
+projectpasswordsubject =
+projectpasswordtext =
 profileusername = Shfrytëzuesi
-projectassignedsubject = Collabtive lajmërim: Projekti është caktuar
+hello =
+projectassignedsubject = Collabtive lajmërim – Projekti është caktuar
 projectassignedtext = Tungjatjeta,<br />një projekt i ri tu është caktuar ty:
-taskassignedsubject = Collabtive lajmërim: Detyra është caktuar
+taskassignedsubject = Collabtive lajmërim – Detyra është caktuar
 taskassignedtext = Tungjatjeta,<br />një detyrë e re tu është caktuar ty:
 
 {* Files *}
@@ -187,7 +194,7 @@ directory = Direktorium
 editfile = Ndrysho fajllin
 editfolder = Ndrysho folderin
 file = Fajlli
-filecreatedsubject = Collabtive lajmërim: Një fajll është shtuar
+filecreatedsubject = Collabtive lajmërim – Një fajll është shtuar
 filecreatedtext = Tungjatjeta,<br />një fajll është shtuar në një nga projektet e tua.
 files = Fajllat
 filewasadded = Fajlli është shtuar
@@ -199,8 +206,8 @@ folderwasdeleted = Folderi është fshirë
 folderwasedited = Folderi është ndryshuar
 managefolders = Menaxho folderët
 maxsize = Madhësia maksimale
-parent = Parent folder
-rootdir = Root directory
+parent =
+rootdir =
 visibility = I dukshëm për
 
 {* Search *}
@@ -220,36 +227,38 @@ searchitem = Elementi nga kërkimi
 
 {* Languages *}
 
-al = Albanian
-ar = Arabic
-bg = Bulgarian
-ca = Catalan
-cn = Chinese
-cz = Czech
-da = Danish
-de = German
-en = English
-es = Spanish
-es_gl = Galician
-fi = Finnish
-fr = French
-gr = Greek
-hu = Hungarian
-it = Italian
-jp = Japanese
-lt = Lithuanian
-nl = Dutch
-no = Norvegian
-pl = Polish
-pt = Portuguese
-pt_br = Portuguese (Brazilian)
-ro = Romanian
-rs = Serbian
-ru = Russian
-se = Swedish
-sk = Slovak
-tr = Turkish
-ua = Ukranian
+al =
+ar =
+bg =
+ca =
+cs =
+da =
+de =
+el =
+en =
+es =
+fa =
+fi =
+fr =
+gl =
+hr =
+hu =
+it =
+ja =
+lt =
+nl =
+nn =
+pl =
+pt =
+pt_br =
+ro =
+ru =
+se =
+sk =
+sr =
+tr =
+uk =
+zh =
 
 {* Calendar *}
 
@@ -313,6 +322,8 @@ makedirwritable = Ju lutem mundësoni të drejta për të shkruar në direktoriu
 makefilewritable = Ju lutem mundësoni të drejta për të shkruar në fajll.
 phpversion = Ju nevojitet së paku PHP verzioni 5.1 për Collabtive.
 proceedtologin = Vazhdoni te faqja e kyçjes.
+mb_string_enabled =
+enable_mb_string =
 
 {* Timetracker *}
 
