--- a/language/ar/lng.conf
+++ b/language/ar/lng.conf
@@ -30,11 +30,18 @@ male = ذكر
 members = الناس
 myaccount = حسابي
 newpass = كلمة سر جديدة
+none =
 oldpass = كلمة سر قديمة
 password = كلمة السر
 phone = التليفون
 rate = المعدل بالساعات
 repeatpass = كرر كلمة السر
+resetpassword =
+resetpasswordemail =
+resetpasswordforgot =
+resetpasswordgenerate =
+resetpasswordsent =
+resetpasswordfail =
 state = محافظة
 stayloggedin = إبقني مسجل بالداخل
 template = النموذج
@@ -54,12 +61,14 @@ zip = الرقم البريدي
 access = وصول
 addproject = اضف مشروع
 assignto = كلفه لكل من
+budget =
 closedprojects = مشاريع مغلقة
 deassign = الغي التكلفة
 description = الوصف
 editproject = عدل المشروع
 myprojects = مشاريعي
 name = الاسم
+neverdue =
 noprojects = لا يوجد مشاريع.
 openprojects = مشاريع مفتوحة
 project = مشروع
@@ -147,7 +156,9 @@ mailusername = SMTP اسم المستخدم لـ
 mailpass = SMTP كلمة المرور لـ
 profileaddedsubject = 
 profileaddedtext = 
-profilepass = 
+profilepass =
+projectpasswordsubject =
+projectpasswordtext =
 profileusername = 
 hello = مرحبا
 projectassignedsubject = ملحوظة من Collabtive – تم تكلفة المشروع
@@ -165,9 +176,9 @@ directory = مجلد
 editfile = عدل ملف
 editfolder = عدل مجلد
 file = ملف
-files = ملفات
 filecreatedsubject = 
 filecreatedtext = 
+files = ملفات
 filewasadded = تم اضافة الملف
 filewasdeleted = تم حذف الملف
 filewasedited = تم تعديل الملف
@@ -177,7 +188,9 @@ folderwasdeleted = تم حذف المجلد
 folderwasedited = تم تعديل المجلد
 managefolders = إدارة المجلدات
 maxsize = اقصي حجم
+parent =
 rootdir = المجلد الجذر
+visibility = 
 advancedsearch = بحث متقدم
 didyoumean = هل تقصد
 gosearch = ابحث!
@@ -190,18 +203,21 @@ search = البحث
 searchfor = ابحث عن
 searching = جاري البحث...
 searchitem = ابحث عن عنصر
+al =
 ar = عربي
 bg = بلغاري
 ca = 
-zh = صيني
 cs = شيكي
 da = الدانماركية
 de = المانية
+el =
 en = إنجليزي
 es = اسباني
-gl = الجاليكية
+fa =
 fi = 
 fr = فرنسي
+gl = الجاليكية
+hr =
 hu = مجري
 it = إيطالي
 ja = ياباني
@@ -212,12 +228,13 @@ pl = بولندي
 pt = برتغالي
 pt_br = برتغالي (برازيلي)
 ro = روماني
-sr = صربي
 ru = روسي
 se = 
 sk = 
+sr = صربي
 tr = تركي
 uk = 
+zh = صيني
 calendar = التقويم
 dateformat = هيئة التاريخ
 timezone = زمن المنطقة
@@ -273,6 +290,8 @@ makefilewritable = رجاءا اجعل هذا الملف قابل للكتابة
 phpversion = تحتاج علي الاقل الاصدار 5.1 من PHP لتستخدم Collabtive.
 proceedtologin = اكمل لصفحة الدخول.
 comment = تعليق
+mb_string_enabled =
+enable_mb_string =
 edittimetracker = عدل مدخلة متعقب الوقت
 endafterstart = وقت النهاية يجب ان يكون بعد وقت البداية
 ended = ينتهي
@@ -281,6 +300,7 @@ filterreport = فلتر التقرير
 hours = ساعات
 inserttime = إدخل الوقت الحالي
 noassociatedtask = لا يوجد اي مهمة مرتبطة
+report =
 reporting = يقرر
 started = بدأ
 totalhours = إجمالي الساعات
@@ -325,12 +345,14 @@ edited = عدا
 excelexport = Excel
 export = صدّر
 favicon = Favicon
+general =
 help = مساعدة
 icalexport = iCal
 import = استورد من الـ Basecamp
 importsuccess = تمت عملية الاستيراد بنجاح
 inactive = خامل
 no = لا
+notify =
 objoff = خامل
 objon = نشيط
 on = انشيء
@@ -349,6 +371,7 @@ settings = الخصائص
 settingschanged = تم تغير الخصائص
 settingsedited = 
 showall = اظهر الكل
+started =
 subtitle = عنوان فرعي
 systemadministration = إدارة النظام
 systemdefault = المعتاد
