--- a/language/ja/lng.conf
+++ b/language/ja/lng.conf
@@ -1,4 +1,4 @@
-address = 住所
+address = アドレス
 adduser = ユーザー追加
 admin = 管理者
 all = 全て
@@ -30,6 +30,7 @@ male = 男性
 members = メンバー
 myaccount = アカウント
 newpass = 新しいパスワード
+none = None
 oldpass = 古いパスワード
 password = パスワード
 phone = 電話
@@ -49,14 +50,18 @@ userwasdeassigned = ユーザーが割り当て解除されました
 userwasdeleted = ユーザーが消去されました
 userwasedited = プロフィールが編集されました
 vcardexport = vCard
-welcomeback = Welcome back
-zip = zip
+welcomeback = お帰りなさい
+zip = 郵便番号
+
+{* Project *}
+
 access = アクセス
 addproject = プロジェクトを追加する
 assignto = 割り当て
+budget = 予算
 closedprojects = 終了したプロジェクト
 deassign = 割り当て解除
-description = タイトル
+description = 記述内容
 editproject = プロジェクトを編集する
 myprojects = 担当プロジェクト
 name = 名前
@@ -73,6 +78,9 @@ projectwasedited = プロジェクトが編集されました
 projectwasopened = プロジェクトが開かれました
 report = レポート
 start = 開始
+
+{* Task / Tasklist *}
+
 addtask = タスクを追加する
 addtasklist = タスクリストを追加する
 assign = 割り当て
@@ -85,7 +93,7 @@ edittasklist = タスクリスト編集
 latetasks = 遅延タスク
 mytasks = マイタスク
 newtasks = 新規タスク
-notasklists =
+notasklists = No tasklist found. Please create a tasklist.
 notasks = 未解決のタスクはありません
 openprogress = オープン
 status = 状態
@@ -107,6 +115,9 @@ taskwasedited = タスクが編集されました
 taskwasopened = タスクが開かれました
 text = 内容
 todaytasks = 本日のタスク
+
+{* Milestone *}
+
 addmilestone = マイルストーンを追加する
 donemilestones = 実行中のマイルストーン
 due = 期日
@@ -122,6 +133,9 @@ milestonewasedited = マイルストーンが編集されました
 milestonewasopened = マイルストーンが開かれました
 newmilestones = 新規マイルストーン
 todaystones = 本日のマイルストーン
+
+{* Messages *}
+
 addmessage = メッセージ追加
 answer = 返信
 editmessage = メッセージを編集する
@@ -130,8 +144,8 @@ messages = メッセージ
 messagewasadded = メッセージが追加されました
 messagewasdeleted = メッセージが消去されました
 messagewasedited = メッセージが編集されました
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = メッセージがサブジェクトに追加されました
+messagewasaddedtext = メッセージがテキストに追加されました
 mymessages = マイメッセージ
 replies = 返信
 reply = 返信
@@ -139,21 +153,27 @@ replywasadded = 返信が追加されました
 replywasdeleted = 返信が消去されました
 replywasedited = 返信が編集されました
 title = タイトル
-mailfrommail = Sender e-mail
-mailfromname = Sender name
+
+{* eMails *}
+
+mailfrommail = 送信ユーザメールアドレスl
+mailfromname = 送信ユーザ名
 mailmethod = メール方法
 mailserver = メールサーバー
-mailusername = ユーザー名
-mailpass = パスワード
-profileaddedsubject = 
-profileaddedtext = 
-profilepass = 
-profileusername = 
-hello = 
-projectassignedsubject =
-projectassignedtext =
-taskassignedsubject =
-taskassignedtext =
+mailusername = SMTP ユーザー名
+mailpass = SMTP パスワード
+profileaddedsubject = プロファイル追加 件名
+profileaddedtext = プロファイル追加 本文
+profilepass = プロファイルパスワード
+profileusername = プロファイルユーザ名
+hello = お疲れ様です
+projectassignedsubject = プロジェクトが割り当てられた 件名
+projectassignedtext = プロジェクトが割り当てられた 本文
+taskassignedsubject = タスクが割り当てられた 件名
+taskassignedtext = タスクが割り当てられた 本文
+
+{* Files *}
+
 addfile = ファイルを追加する
 addfiles = ファイルを追加する
 addfolder = フォルダーを追加する
@@ -166,8 +186,8 @@ editfile = ファイル編集
 editfolder = フォルダー編集
 file = ファイル
 files = ファイル
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = ファイルが追加されました 件名
+filecreatedtext = ファイルが追加されました 本文
 filewasadded = ファイルが追加されました
 filewasdeleted = ファイルが消去されました
 filewasedited = ファイルが編集されました
@@ -177,7 +197,12 @@ folderwasdeleted = フォルダーが消去されました
 folderwasedited = フォルダーが編集されました
 managefolders = フォルダーをマネージする。
 maxsize = 最大サイズ
+parent = 親フォルダー
 rootdir = ルートディレクトリ
+visibility = Visible for
+
+{* Search *}
+
 advancedsearch = 詳細検索
 didyoumean = Did you mean
 gosearch = 検索!
@@ -190,34 +215,44 @@ search = 検索
 searchfor = Search for
 searching = Searching...
 searchitem = Search item
-ar = 
-bg =
-ca = 
-cn =
-cz =
-da =
-de =
-en =
-es =
-es_gl =
-fi = 
-fr =
-hu =
-it =
-jp = 日本語
-lt =
-nl =
-nor =
-pl =
-pt =
-pt_br =
-ro =
-rs =
-ru =
-se =
-sk = 
-tr =
-ua = 
+
+{* Languages *}
+
+al = Albanian
+ar = Arabic
+bg = Bulgarian
+ca = Catalan
+cs = Czech
+da = Danish
+de = ドイツ語
+el = ギリシャ語
+en = 英語
+es = スペイン語
+fa = Farsi
+fi = Finnish
+fr = フランス語
+gl = Galician
+hr = Croatian
+hu = ハンガリー語
+it = イタリア語
+ja = 日本語
+lt = Lithuanian
+nl = Dutch
+nn = Norwegian
+pl = Polish
+pt = ポルトガル語
+pt_br = ポルトガル語（ブラジル）
+ro = Romanian
+ru = ロシア語
+se = Swedish
+sk = Serbian
+sr = Serbian
+tr = Turkish
+uk = Ukranian
+zh = 中国語
+
+{* Calendar *}
+
 calendar = カレンダー
 dateformat = 日付フォーマット
 timezone = タイムゾーン
@@ -242,15 +277,21 @@ september = 9月
 october = 10月
 november = 11月
 december = 12月
+
+{* Errors *}
+
 accessdenied = アクセス拒否
 confirmdel = 本当に消去しますか?\n消去が完了すると取り消しできません
 error = エラー
 goback = 戻ってエラーを修正してください
 nopermission = パーミッションエラー
 notyourproject = あなたはこのプロジェクトに属していません
-wrongfield = Please enter a valid value for \"%FIELDNAME%\"
-wrongfields = Please enter valid values for:\n\n
-wrongselect = Please select a valid value in \"%FIELDNAME%\"
+wrongfield = 有効な値を入力してください \"%FIELDNAME%\"
+wrongfields = 有効な値を入力してください（複数）:\n\n
+wrongselect = 有効な値を選択してください \"%FIELDNAME%\"
+
+{* Installation *}
+
 createadmin = 管理者作成
 clickcontinue = "続ける"ボタンを押してインストールを続けてください
 continue = 続ける
@@ -267,11 +308,16 @@ installerconditions = Conditions for the installation
 installerlanguage = インストール言語
 installstep = インストールステップ
 installsuccess = インストールが成功しました。
-iswritable = is writable
+iswritable = 書き込み可能
 makedirwritable = ディレクトリを書き込み可能にする
 makefilewritable = ファイルを書き込み可能にする
 phpversion = PHP バージョン
 proceedtologin = ログインする
+mb_string_enabled = mb_string extension loaded
+enable_mb_string = Please enable mb_string extension
+
+{* Timetracker *}
+
 comment = コメント
 edittimetracker = タイムトラッカーを編集する
 endafterstart = 終了時間は開始時間より遅くなければなりません.
@@ -281,25 +327,32 @@ filterreport = フィルターレポート
 hours = 時間
 inserttime = 現在の時間を挿入する
 noassociatedtask = タスクに関連付けられていません
-reporting = Reporting
+report = レポート
+reporting = レポーティング
 started = 開始時間
 totalhours = 合計時間
 timetable = タイムテーブル
 timetracker = タイムトラッカー
 timetrackeradded = タイムトラッカーが追加されました
-add = 
-addrole = 
+
+{* Roles / Permissions *}
+
+add = 追加
+addrole = 追加ロール
 delete = 消去
-delrole = 
+delrole = 消去ロール
 edit = 編集
-editrole = 
-permissionread = 
+editrole = 編集ロール
+permissionread = 読取権限
 permissions = 権限
 permissionswereedited = 権限が編集されました
 role = 役割
-roleadded = 
-roleedited = 
-roles = 
+roleadded = 役割追加
+roleedited = 役割編集済み
+roles = 役割(s)
+
+{* Miscellaneous *}
+
 active = アクティブ
 activity = 履歴
 action = アクション
@@ -311,7 +364,7 @@ assigned = 割り当てられました
 attachbutton = 添付
 by = 送信者
 cancel = キャンセル
-chat = 
+chat = チャット
 chooseone = 選択してください
 close = 閉じる
 closed = closed
@@ -322,18 +375,20 @@ deassigned = 割り当てが解除されました
 deleted = 消去されました
 desktop = デスクトップ
 edited = 編集されました
-excelexport = Excel
+excelexport = Excelエクスポート
 export = エクスポート
 favicon = Favicon
-help = Help
+general = General
+help = ヘルプ
 icalexport = iCal
 import = インポート
 importsuccess = インポート成功
 inactive = Inactive
 no = No
+notify = 通知
 objoff = Off
 objon = On
-on = 日時
+on = on
 or = or
 open = 開く
 opened = opened
@@ -342,13 +397,14 @@ pdfexport = PDF
 private = プライベート
 public = パブリック
 rssfeed = RSS
-rsspass = 
-rssuser = 
+rsspass = RSSパス
+rssuser = RSSユーザ
 send = 送る
 settings = 設定
-settingschanged = 
-settingsedited = 
+settingschanged = 設定変更済み
+settingsedited = 設定編集済み
 showall = 全て見る
+started = 開始時間
 subtitle = サブタイトル
 systemadministration = システム管理
 systemdefault = 初期状態
@@ -358,3 +414,4 @@ was = が
 were = が
 yes = Yes
 zipexport = ZIP
+neverdue = Never due
