--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -68,6 +68,7 @@ description = Beschreibung
 editproject = Projekt bearbeiten
 myprojects = Meine Projekte
 name = Name
+neverdue = Nie fällig
 noprojects = Zur Zeit stehen keine Projekte an.
 openprojects = Offene Projekte
 project = Projekt
@@ -212,9 +213,11 @@ de = Deutsch
 el = Griechisch
 en = Englisch
 es = Spanisch
+fa = Farsi
 fi = Finnisch
 fr = Französisch
 gl = Galizisch
+hr = Kroatisch
 hu = Ungarisch
 it = Italienisch
 ja = Japanisch
@@ -287,6 +290,8 @@ makefilewritable = Bitte machen sie die Datei beschreibbar.
 phpversion = Collabtive erfodert mindestens die PHP-Version 5.1.
 proceedtologin = Hier geht es zur Login-Seite.
 comment = Kommentar
+mb_string_enabled = mb_string-Erweiterung geladen
+enable_mb_string = Bitte mb_string-Erweiterung aktivieren
 edittimetracker = Zeiterfassung bearbeiten
 endafterstart = Der Beginn muss zeitlich vor der Beendigung liegen.
 ended = Beendet
@@ -295,6 +300,7 @@ filterreport = Report filtern
 hours = Stunden
 inserttime = Aktuelle Zeit eintragen
 noassociatedtask = Keiner Aufgabe zugeordnet
+report = Bericht
 reporting = Berichte
 started = Start
 totalhours = Stunden gesamt
@@ -365,6 +371,7 @@ settings = Einstellungen
 settingschanged = Einstellungen wurden bearbeitet
 settingsedited = Einstellungen wurden bearbeitet
 showall = Alle anzeigen
+started = Begonnen
 subtitle = Slogan
 systemadministration = Systemverwaltung
 systemdefault = Systemstandard
@@ -374,4 +381,3 @@ was = wurde
 were = wurden
 yes = Ja
 zipexport = ZIP
-neverdue = Nie fällig
